--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1 id="title">Diego Armando Maradona</h1>
     <section id="img-div">
       <img id="image" src="https://i.pinimg.com/originals/79/85/08/7985080c1431619fa89314e11aff86b3.png" alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists">
-      <figcaption id="img-caption"> 
+      <h5 id="img-caption"> 
         This image represent Diago Armando Maradona making some magic things with the ball!
-      </figcaption>
+      </h5>
     </section>
     <section id="tribute-info">
       <h3 id="headline">Here's a time line of Maradona's life:</h3>
@@ -55,9 +55,8 @@
           <cite>-- Ramiro and Lincoln</cite>
       </blockquote>
       <h3>
-          If you have time, you should read more about this incredible human being
-          on his
-          <a id="tribute-link" href="https://es.wikipedia.org/wiki/Diego_Maradona" target="_blank">Wikipedia entry</a>.
+          If you have time, you should read more about this incredible human being on his
+          <a id="tribute-link" href="https://es.wikipedia.org/wiki/Diego_Maradona" target="_blank" rel="noopener">Wikipedia entry</a>.
       </h3>
     </section>
   </main>
